--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@ Hayran Yapımı Çeviriler!
 <img src="sprites/about/cc0.png" height="30" style="opacity:0.7"/>
 <br>
 Bu içeriği değiştirmekte &amp; tekrar kullanmakta özgürsünüz!
-<a href="https://github.com/ncase/anxiety#public-domain" target="_blank">(huh?)</a>
+<a href="https://github.com/ncase/anxiety#public-domain" target="_blank">(hah?)</a>
 <br>
-<a href="https://github.com/ncase/anxiety" target="_blank">Get the full source code</a>
+<a href="https://github.com/ncase/anxiety" target="_blank">Oyunun kaynak kodunu edinin</a>
 </div>
 
 <div class="corner-text" id="topright">
