--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<span id="cta_text1">
 			<div class="mini-icon" pic="click" style="top:3px;"></div>
 			<span id="instructions_if_not_mobile">
-				tık ve boşluk <!-- TRANSLATE THIS -->
+				tıkla veya boşluğa bas <!-- TRANSLATE THIS -->
 			</span>
 			<span id="instructions_if_mobile" style="display:none">
 				bi'yere tıkla <!-- TRANSLATE THIS -->
@@ -167,8 +167,8 @@
 		</div>
 		<div style="float: right; width: 135px; height: 63px;">
 			<!-- TRANSLATE THIS -->
-			Ve ilerle
-			<div id="text_automatic_toggle">on click</div>
+			ve böyle ilerle
+			<div id="text_automatic_toggle">tıklayınca</div>
 		</div>
 		<div style="clear:both"></div>
 		<span id="volume_options">
